[package]
name = "swc-flow-parser-react-native"
version = "0.1.0"
edition = "2021"

[dependencies]
swc_common = "19.0.0"
swc_ecma_parser = { version = "36.0.0", features = ["typescript", "flow"] }
swc_ecma_ast = "21.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
